--- a/frontend/quick-invoice-frontend/package.json
+++ b/frontend/quick-invoice-frontend/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "quick-invoice",
+  "name": "quick-invoice-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "lucide-react": "^0.287.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
