--- a/backend/quick-invoice/src/main/resources/application.properties
+++ b/backend/quick-invoice/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+server.port=8090
